--- a/popup.html
+++ b/popup.html
@@ -1,78 +1,167 @@
 <!doctype html>
-<html style="border-radius: 5px;">
-
+<html lang="en" style="border-radius: 5px;">
 <head>
-  <script src="popup.js" type="module"></script>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Jugaadu Flex 2.0</title>
+  
+  <!-- PicoCSS and Bootstrap Icons -->
+  <link href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
+  <style>
+    body {
+      font-family: 'Poppins', sans-serif;
+      background-color: #f0f0f5;
+      color: #333;
+      font-size: 14px;
+      width: 250px; /* Fixing body width */
+    }
+
+    h1, h2 {
+      font-size: 1.6rem;
+      color: #006d77;
+      margin-bottom: 10px;
+    }
+
+     /* Styling the header */
+     header h1 {
+      color: #e63946; /* Bold red color */
+      font-family: 'Pacifico', cursive; /* Cursive font */
+      font-size: 1.5rem; /* Increase the font size */
+      text-align: center;
+      margin: 8px 0; /* Adding some margin */
+    }
+
+    header {
+      padding: 5px 0;
+      margin-bottom: -30px;
+    }
+
+    main {
+      padding: 10px;
+      margin-bottom: -40px;
+    }
+
+    form {
+      margin: 10px 0;
+    }
+
+    button {
+      font-size: 14px;
+      padding: 8px 16px;
+      border-radius: 20px;
+      background: linear-gradient(45deg, #0096c7, #0077b6);
+      color: white;
+      transition: transform 0.2s ease-in-out;
+    }
+
+    button:hover {
+      transform: scale(1.05);
+    }
+
+    select {
+      padding: 6px;
+      border-radius: 10px;
+      border: 1px solid #0077b6;
+      font-size: 14px;
+      background-color: #e9ecef;
+      color: #333;
+      width: 170px;
+    }
+
+    hr {
+      border-top: 1px solid #0077b6;
+      margin: 10px 0;
+    }
+
+    footer {
+      background-color: #023047;
+      color: aliceblue;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 50px; /* Define footer height for equal spacing */
+      padding: 5px;
+      margin-top: 20px;
+    }
+
+    footer p {
+      font-size: 12px;
+      margin: 0;
+    }
+
+    a {
+      color: #ffd166;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    .container {
+      max-width: 400px;
+      margin: 0 auto;
+      margin-bottom: -50px;
+    }
+
+    .text-center {
+      text-align: center;
+    }
+  </style>
 </head>
 
-<body class="container">
-  <header class="my-3">
+<body>
+  <!-- Header Section -->
+  <header class="container">
     <h1 class="text-center">Jugaadu Flex 2.0</h1>
   </header>
 
-  <form id="grand-marks" class="text-center">
-    <button class="btn btn-dark" style="width: max-content;">Fix Grand Total Marks</button>
-  </form>
+  <!-- Main Content Section -->
+  <main class="container">
+    <section>
+      <form id="grand-marks" class="text-center">
+        <button class="btn">Fix Grand Total Marks</button>
+      </form>
 
-  <hr> 
-  
-  <form id="gpa-calculator" class="text-center">
-    <button class="btn btn-dark" style="width: max-content;">Turn on GPA Calculator</button>
-  </form>
+      <hr>
 
-  <hr>
+      <form id="gpa-calculator" class="text-center">
+        <button class="btn">Turn on GPA Calculator</button>
+      </form>
 
-  <form id="admit-card" class="text-center">
-    <select id="admit-card-radio">
-      <option value="Sessional-I" selected="selected">Sessional 1</option>
-      <option value="Sessional-II">Sessional 2</option>
-      <option value="Final">Final</option>
-    </select>
-    <button class="btn btn-dark" style="width: max-content;">Get Admit Card</button>
-  </form>
+      <hr>
 
-  <hr>
+      <form id="admit-card" class="text-center">
+        <label for="admit-card-radio">Select Exam:</label>
+        <select id="admit-card-radio">
+          <option value="Sessional-I" selected="selected">Sessional 1</option>
+          <option value="Sessional-II">Sessional 2</option>
+          <option value="Final">Final</option>
+        </select>
+        <button class="btn mt-2">Get Admit Card</button>
+      </form>
 
-  <form id="feedback-form" class="my-3 text-center">
-    <h2>Feedback</h2>
-    <div class="m-auto" style="width: max-content;">
-      <label class="radio-inline control-label">
-        <input type="radio" name="feedback-radio" value="Strongly Agree">
-        <span>Strongly Agree</span>
-      </label>
-      <label class="radio-inline control-label">
-        <input type="radio" name="feedback-radio" value="Agree">
-        <span>Agree</span>
-      </label>
-      <label class="radio-inline control-label">
-        <input type="radio" name="feedback-radio" value="Uncertain">
-        <span>Uncertain</span>
-      </label>
-    </div>
-    <div class="m-auto" style="width: max-content;">
-      <label class="radio-inline control-label">
-        <input type="radio" name="feedback-radio" value="Dissatisfied">
-        <span>Dissatisfied</span>
-      </label>
-      <label class="radio-inline control-label">
-        <input type="radio" name="feedback-radio" value="Strongly Disagree">
-        <span>Strongly Disagree</span>
-      </label>
-      <label class="radio-inline control-label">
-        <input type="radio" name="feedback-radio" value="Randomize">
-        <span>Randomize</span>
-      </label>
-    </div>
+      <hr>
 
-    <button class="btn btn-dark my-1" style="width: max-content;">Select</button>
-  </form>
+      <form id="feedback-form" class="my-3 text-center">
+        <h2>Feedback</h2>
+        <select class="m-auto" style="display: block;">
+          <option value="Strongly Agree">Strongly Agree</option>
+          <option value="Agree">Agree</option>
+          <option value="Uncertain">Uncertain</option>
+          <option value="Dissatisfied">Dissatisfied</option>
+          <option value="Strongly Disagree">Strongly Disagree</option>
+          <option value="Randomize">Randomize</option>
+        </select>
+        <button class="btn mt-2">Submit Feedback</button>
+      </form>
+    </section>
+  </main>
 
-  <footer class="my-3">
-    <p class="text-center">Made with <i class="bi bi-heart"></i> by <a href="https://fahad.secpose.com"
-        class="link-dark" target="_blank">Fahad Sheikh</a></p>
+  <!-- Footer Section -->
+  <footer class="container text-center">
+    <p style="color: aliceblue;">Made with <i class="bi bi-heart-fill"></i> by <a href="https://fahad.secpose.com" target="_blank">Fahad Sheikh</a></p>
   </footer>
 </body>
 
